--- a/src/scss/mixins.scss
+++ b/src/scss/mixins.scss
@@ -3,5 +3,5 @@
   border-width: 6px;
   border-style: solid;
   border-color: var(--secondary-clr) transparent transparent transparent;
-  margin-top: 2rem;
+  // margin-top: 2rem;
 }
