add list and header on beranda page

--- a/src/css/beranda.css
+++ b/src/css/beranda.css
@@ -48,11 +48,10 @@ a {
 }
 
 .beranda-container .header-section .select-milik .triangle {
-  display: block;
+  display: inline-block;
   border-width: 6px;
   border-style: solid;
   border-color: var(--secondary-clr) transparent transparent transparent;
-  display: inline;
   margin-top: 2rem;
   transform: translateY(-60%);
   margin-left: 1rem;
@@ -66,6 +65,7 @@ a {
   border: 1px solid var(--secondary-clr);
   margin-top: 1rem;
   border-radius: 5px;
+  z-index: 98;
 }
 
 .beranda-container .header-section .select-milik .list li {
@@ -109,4 +109,93 @@ a {
   border: none;
   border-radius: 25px;
   outline: none;
+}
+
+.beranda-container .select-status {
+  margin-top: 2rem;
+  position: relative;
+  max-width: 250px;
+  min-width: 150px;
+  cursor: pointer;
+}
+
+.beranda-container .select-status p {
+  font-size: 1.8rem;
+  pointer-events: none;
+}
+
+.beranda-container .select-status p .triangle {
+  display: inline-block;
+  border-width: 6px;
+  border-style: solid;
+  border-color: var(--secondary-clr) transparent transparent transparent;
+  display: inline-block;
+  margin-top: 2rem;
+  transform: translateY(30%);
+  margin-left: 1rem;
+  cursor: pointer;
+  pointer-events: none;
+}
+
+.beranda-container .select-status .list {
+  position: absolute;
+  top: 100%;
+  width: 70%;
+  left: 0;
+  border: 1px solid var(--secondary-clr);
+  margin-top: 1rem;
+  font-size: 1.4rem;
+  border-radius: 5px;
+  background-color: var(--primary-clr);
+  z-index: 99;
+}
+
+.beranda-container .select-status .list li {
+  list-style: none;
+  padding: 0.5rem 2rem;
+}
+
+.beranda-container .select-status .list li:hover {
+  background-color: var(--secondary-clr);
+  color: var(--primary-clr);
+}
+
+.beranda-container .select-status.hide .list {
+  display: none;
+}
+
+.beranda-container .list-section {
+  margin-top: 5rem;
+  overflow-y: auto;
+  max-height: 400px;
+  position: relative;
+}
+
+.beranda-container .list-section .table-container {
+  border-collapse: collapse;
+  position: relative;
+}
+
+.beranda-container .list-section .table-container .table-head {
+  border-collapse: collapse;
+  border-bottom: 1px solid #bababa;
+  margin-bottom: 2rem;
+}
+
+.beranda-container .list-section .table-container .table-head th {
+  padding: 1rem 10rem 2rem 0;
+  font-size: 1.4rem;
+  color: #bababa;
+}
+
+.beranda-container .list-section .table-container td {
+  font-size: 1.4rem;
+  font-weight: 500;
+  padding: 1rem 1rem 1rem 0;
+}
+
+.beranda-container .list-section .table-container td img {
+  height: 80px;
+  width: 80px;
+  border-radius: 20px;
 }
