--- a/src/css/login.css
+++ b/src/css/login.css
@@ -14,6 +14,10 @@ html {
   font-size: 62.5%;
 }
 
+a {
+  text-decoration: none;
+}
+
 .container-login-page {
   min-height: 100vh;
   display: flex;
