--- a/src/scss/mixins.scss
+++ b/src/scss/mixins.scss
@@ -1,5 +1,5 @@
 @mixin triangle() {
-  display: block;
+  display: inline-block;
   border-width: 6px;
   border-style: solid;
   border-color: var(--secondary-clr) transparent transparent transparent;
