--- a/src/scss/tambahBarang.scss
+++ b/src/scss/tambahBarang.scss
@@ -37,7 +37,8 @@
 
       .input {
         width: 100%;
-        height: 5rem;
+        min-height: 5rem;
+        height: auto;
         // margin-top: 1rem;
         padding: 0 2rem;
         font-weight: 500;
@@ -46,6 +47,25 @@
         position: relative;
         overflow: hidden;
         font-size: 1.8rem;
+
+        &.photo-input {
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          position: relative;
+
+          .icon {
+            background: white;
+            height: 100%;
+            width: 65px;
+            position: absolute;
+            right: 0;
+            pointer-events: none;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+          }
+        }
 
         .custom-file-upload {
           display: block;
@@ -79,7 +99,8 @@
               width: 100%;
               left: 0;
               // border: 1px solid red;
-              text-align: center;
+              text-align: left;
+              padding: 0 2rem;
             }
           }
         }
