--- a/src/css/login.css
+++ b/src/css/login.css
@@ -19,7 +19,10 @@ a {
 }
 
 .container-login-page {
-  min-height: 100vh;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
   display: flex;
   justify-content: center;
   align-items: center;
