--- a/src/scss/beranda.scss
+++ b/src/scss/beranda.scss
@@ -2,9 +2,16 @@
 @import "./mixins.scss";
 
 .beranda-container {
+  // overflow: hidden;
+  position: relative;
   .header-section {
     display: flex;
     align-items: center;
+
+    .title-select-cont {
+      display: flex;
+      align-items: center;
+    }
 
     .title {
       font-size: 3.6rem;
@@ -44,6 +51,8 @@
         width: 100%;
         left: 0;
         border: 1px solid var(--secondary-clr);
+        background-color: var(--primary-clr);
+
         margin-top: 1rem;
         border-radius: 5px;
         z-index: 98;
@@ -147,7 +156,7 @@
   .list-section {
     margin-top: 5rem;
     overflow-y: auto;
-    max-height: 400px;
+    // max-height: 400px;
     position: relative;
     // border: 1px solid red;
     .table-container {
@@ -171,6 +180,11 @@
         font-weight: 500;
         padding: 1rem 1rem 1rem 0;
 
+        span {
+          display: block;
+          display: none;
+        }
+
         img {
           height: 80px;
           width: 80px;
@@ -179,20 +193,51 @@
       }
     }
   }
+}
 
-  .option-section {
-    display: flex;
-    margin-top: 2rem;
-    justify-content: flex-end;
+@media only screen and (max-width: 600px) {
+  .beranda-container {
+    .header-section {
+      flex-direction: column;
+      justify-content: space-between;
+      width: 100%;
 
-    .btn {
-      background: var(--secondary-clr);
-      color: var(--primary-clr);
-      border: none;
-      font-size: 1.4rem;
-      border-radius: 5px;
-      padding: 1rem 2rem;
-      cursor: pointer;
+      .title-select-cont {
+        width: 100%;
+        justify-content: space-between;
+
+        .select-milik {
+          margin: 0;
+        }
+      }
+      .title {
+        font-size: 2.4rem;
+        margin: 0;
+      }
+
+      .search-input {
+        width: 100%;
+        margin-top: 2rem;
+      }
+    }
+    .select-status {
+      margin: 0;
+    }
+
+    .list-section {
+      .table-container {
+        .table-head {
+          display: none;
+        }
+        td span {
+          display: block;
+          color: #bababa;
+        }
+
+        td:not(.item-name):not(.item-img) {
+          display: none;
+        }
+      }
     }
   }
 }
