--- a/src/scss/barangDetail.scss
+++ b/src/scss/barangDetail.scss
@@ -4,13 +4,14 @@
 }
 
 .container {
-  width: 400px;
+  min-width: 300px;
+  max-width: 500px;
   margin: auto;
 
   .img {
     max-width: 400px;
     width: 100%;
-    min-width: 300px;
+    // min-width: 300px;
     height: auto;
     border: 2px solid black;
     border-radius: 20px;
