--- a/src/scss/login.scss
+++ b/src/scss/login.scss
@@ -1,8 +1,11 @@
 @import "./reset.scss";
 
 .container-login-page {
-  min-height: 100vh;
-
+  // min-height: 100vh;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
   display: flex;
   justify-content: center;
   align-items: center;
