--- a/src/css/beranda.css
+++ b/src/css/beranda.css
@@ -185,6 +185,15 @@ a {
   position: relative;
 }
 
+.beranda-container .list-section .table-container .item {
+  cursor: pointer;
+  padding: 0 1rem;
+}
+
+.beranda-container .list-section .table-container .item:hover {
+  background-color: rgba(186, 186, 186, 0.5);
+}
+
 .beranda-container .list-section .table-container .table-head {
   border-collapse: collapse;
   border-bottom: 1px solid #bababa;
@@ -212,6 +221,7 @@ a {
   height: 80px;
   width: 80px;
   border-radius: 20px;
+  margin-left: 1rem;
 }
 
 @media only screen and (max-width: 600px) {
