--- a/src/scss/beranda.scss
+++ b/src/scss/beranda.scss
@@ -163,6 +163,15 @@
       border-collapse: collapse;
       position: relative;
 
+      .item {
+        cursor: pointer;
+        padding: 0 1rem;
+
+        &:hover {
+          background-color: rgba($color: #bababa, $alpha: 0.5);
+        }
+      }
+
       .table-head {
         border-collapse: collapse;
         border-bottom: 1px solid #bababa;
@@ -189,6 +198,7 @@
           height: 80px;
           width: 80px;
           border-radius: 20px;
+          margin-left: 1rem;
         }
       }
     }
