--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -43,6 +43,14 @@ a {
   color: var(--secondary-clr);
 }
 
+.header nav ul li input {
+  opacity: 0;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+}
+
 .header nav ul li.dropdown {
   display: flex;
   align-items: center;
@@ -53,6 +61,7 @@ a {
 
 .header nav ul li.dropdown svg {
   transition: transform 250ms ease;
+  pointer-events: none;
 }
 
 .header nav ul li.dropdown svg.rotate {
@@ -68,6 +77,7 @@ a {
   right: -120%;
   transform: translateY(-50%);
   margin-top: 2rem;
+  pointer-events: none;
 }
 
 .header nav ul li.dropdown ul {
