--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -24,15 +24,13 @@ a {
 }
 
 .header nav {
-  max-width: 1366px;
-  padding: 0 2rem;
-  padding-right: 4rem;
   margin: auto;
 }
 
 .header nav ul {
   display: flex;
   justify-content: flex-end;
+  width: 100%;
 }
 
 .header nav ul li {
@@ -40,7 +38,16 @@ a {
   margin-left: 6rem;
   font-size: 1.8rem;
   font-weight: 600;
+  display: flex;
+  align-items: center;
   color: var(--secondary-clr);
+}
+
+.header nav ul li.back {
+  margin-right: auto;
+  display: flex;
+  align-items: center;
+  margin-left: 0;
 }
 
 .header nav ul li input {
