--- a/src/scss/navbar.scss
+++ b/src/scss/navbar.scss
@@ -6,20 +6,36 @@
   margin: 5rem 0;
 
   nav {
-    max-width: 1366px;
-    padding: 0 2rem;
-    padding-right: 4rem;
+    // max-width: 1366px;
+    // padding: 0 2rem;
+    // padding-right: 4rem;
     margin: auto;
     ul {
       display: flex;
       justify-content: flex-end;
+      width: 100%;
+      // border: 1px solid red;
 
       li {
         list-style: none;
         margin-left: 6rem;
         font-size: 1.8rem;
         font-weight: 600;
+        display: flex;
+        align-items: center;
         color: var(--secondary-clr);
+
+        &.back {
+          // margin-left: auto;
+          // margin: auto !important;
+          margin-right: auto;
+          // border: 1px solid blue;
+          display: flex;
+          align-items: center;
+          margin-left: 0;
+
+          // display: none;
+        }
         input {
           opacity: 0;
           position: absolute;
@@ -34,6 +50,7 @@
           justify-content: center;
           position: relative;
           cursor: pointer;
+          // margin: auto;
           // border: 1px solid red;
 
           svg {
