--- a/src/scss/navbar.scss
+++ b/src/scss/navbar.scss
@@ -6,9 +6,6 @@
   margin: 5rem 0;
 
   nav {
-    // max-width: 1366px;
-    // padding: 0 2rem;
-    // padding-right: 4rem;
     margin: auto;
     ul {
       display: flex;
@@ -25,6 +22,10 @@
         align-items: center;
         color: var(--secondary-clr);
 
+        a {
+          color: var(--secondary-clr);
+        }
+
         &.back {
           // margin-left: auto;
           // margin: auto !important;
@@ -33,6 +34,7 @@
           display: flex;
           align-items: center;
           margin-left: 0;
+          cursor: pointer;
 
           // display: none;
         }
@@ -127,6 +129,7 @@
         justify-content: space-between;
         li {
           margin: 0;
+          margin-left: 2rem;
           span {
             display: none;
           }
