--- a/src/css/loadingScreen.css
+++ b/src/css/loadingScreen.css
@@ -1,6 +1,6 @@
 .container-loading-sc {
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
   position: fixed;
   left: 0;
   top: 0;
